# cn-codex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cn-codex  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bridge/: Cargo.toml
bridge/src/: config.rs  converter.rs  main.rs  proxy.rs  server.rs
docs/: faq.md
providers/: deepseek.toml  doubao.toml  kimi.toml  qwen.toml  siliconflow.toml  zhipu.toml
