[package]
name = "cn-codex-bridge"
version = "0.1.0"
edition = "2021"
description = "Local API bridge that translates OpenAI Responses API to Chat Completions API for Chinese LLM providers"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
